loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:21: error: 'while' expected but '}' found.
}while (!exitReached()) 
^Poucet1:21: error: ';' expected but 'while' found.
}while (!exitReached()) 
 ^